添加预定手机号

--- a/WK.Tea.Web/Areas/Admin/Views/Order/Index.cshtml
+++ b/WK.Tea.Web/Areas/Admin/Views/Order/Index.cshtml
@@ -421,6 +421,7 @@
                         doorText.attr("readonly", "readonly");
                         doorText.val("您好您的茶室预订成功!" +
                             "\n门店地址:" + data.ShopAddress +
+                            "\n预定手机:" + data.Mobile +
                             "\n客服:" + data.ShopPhoneNum +
                             "\n预订时间:" + data.BTime + "到" + data.ETime +
                            "\n请于开始时间15分钟前点开下面链接获取开门二维码:\n" +
