修改续订结果提示

--- a/WK.Tea.Web/Views/Order/Settlement.cshtml
+++ b/WK.Tea.Web/Views/Order/Settlement.cshtml
@@ -47,7 +47,7 @@
 </pre>
         </div>
     </div>
-    <div class="pay" lay-href="/wxpay/?id=@Model.ID">
+    <div class="pay" lay-href="/wxpay/Index?id=@Model.ID">
         去支付
         <div class="price">￥<span>@Model.FeeCode</span></div>
     </div>
