--- a/WK.Tea.Web/Views/Shop/Index.cshtml
+++ b/WK.Tea.Web/Views/Shop/Index.cshtml
@@ -37,7 +37,7 @@
                         }()
                         , '<div class="mask">'
                         , '<div>'
-                        , '<div class="shop_info_2 shop_name">' + item.ShopName + '<div class="shop_price">288元两小时（含茶）</div></div>'
+                        , '<div class="shop_info_2 shop_name">' + item.ShopName + '<div class="shop_price">' + (item.ID == 6 ? '588元两小时（含茶）' : '288元两小时（含茶）') +'</div></div>'
 
                         , '</div>'
                         , '<div class="info">'
