--- a/WK.Tea.Web/Areas/Admin/Views/Order/Index.cshtml
+++ b/WK.Tea.Web/Areas/Admin/Views/Order/Index.cshtml
@@ -133,7 +133,7 @@
                     <label class="layui-form-label">开始时间</label>
                     <div class="layui-input-block">
                         <input type="hidden" name="ParentNo" />
-                        <input type="text" id="BTime" name="BTime" class="layui-input" lay-verify="required" placeholder="请选择开始时间" autocomplete="off">
+                        <input type="text" id="BTime" name="BTime" readonly class="layui-input" lay-verify="required" placeholder="请选择开始时间" autocomplete="off">
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -472,7 +472,7 @@
                             , type: 'datetime'
                         });
 
-                        $('input[name="BTime"]').val(data.BTime);
+                        $('input[name="BTime"]').val(data.ETime);
                         $('input[name="ParentNo"]').val(data.OrderNo);
                         admin.req({
                             url: '/api/order/rmtl/number'
