--- a/WK.Tea.Web/Views/Shop/Index.cshtml
+++ b/WK.Tea.Web/Views/Shop/Index.cshtml
@@ -4,6 +4,12 @@
     </div>
 </div>
 
+<script type="text/javascript">
+    define = null;
+    require = null;
+</script>
+
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
 <script>
     layui.use(['admin'], function () {
 
@@ -37,7 +43,7 @@
                         }()
                         , '<div class="mask">'
                         , '<div>'
-                        , '<div class="shop_info_2 shop_name">' + item.ShopName + '<div class="shop_price">' + (item.ID == 6 ? '588元两小时（含茶）' : '288元两小时（含茶）') +'</div></div>'
+                        , '<div class="shop_info_2 shop_name">' + item.ShopName + '<div class="shop_price">' + (item.ID == 6 ? '588元两小时（含茶）' : '288元两小时（含茶）') + '</div></div>'
 
                         , '</div>'
                         , '<div class="info">'
@@ -48,7 +54,7 @@
                             } else if (item.Flag == 1) {
                                 return '<div class="shop_info_2"> <img style="width:12px; "  src="/assets/images/shop_icon1.png" />' + item.ShopAddress + '- 已停业</div> ';
                             } else {
-                                return '<div class="shop_info_2"> <img style="width:12px; "  src="/assets/images/shop_icon1.png" />' + item.ShopAddress + '</div> ';
+                                return '<div class="shop_info_2 daohang"> <img style="width:12px; "  src="/assets/images/shop_icon1.png" />' + item.ShopAddress + '</div> ';
                             }
                         }()
                         , '<div >'
@@ -64,7 +70,6 @@
 
                     $('.shop-list').append(shopItem);
 
-
                     if (item.Flag != 2) {
                         shopItem.click(function () {
 
@@ -78,5 +83,54 @@
             }
         });
 
+        admin.req({
+            url: '/Weixin/sign'
+            , type: 'get'
+            //, contentType: "application/json"
+            , done: function (res) { //这里要说明一下：done 是只有 response 的 code 正常才会执行。而 succese 则是只要 http 为 200 就会执行
+                wx.config({
+                    debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                    appId: res.appId, // 必填，公众号的唯一标识
+                    timestamp: res.timestamp, // 必填，生成签名的时间戳
+                    nonceStr: res.nonceStr, // 必填，生成签名的随机串
+                    signature: res.sign,// 必填，签名
+                    jsApiList: ['openLocation', 'getLocation'] // 必填，需要使用的JS接口列表
+                });
+            }, success: function (res) {
+            }, complete: function () {
+
+            }
+        });
+
+        wx.ready(function () {
+            alert(1);
+        });
+
+        wx.error(function (res) {
+            alert(res);
+        });
+
+        document.getElementsByClassName("daohang").onclick = function () {
+            wx.openLocation({
+                latitude: 0, // 纬度，浮点数，范围为90 ~ -90
+                longitude: 0, // 经度，浮点数，范围为180 ~ -180。
+                name: '测试', // 位置名
+                address: '测试', // 地址详情说明
+                scale: 1, // 地图缩放级别,整形值,范围从1~28。默认为最大
+                infoUrl: '' // 在查看位置界面底部显示的超链接,可点击跳转
+            });
+        }
+
+        function getDaohang() {
+            alert(2);
+            wx.openLocation({
+                latitude: 0, // 纬度，浮点数，范围为90 ~ -90
+                longitude: 0, // 经度，浮点数，范围为180 ~ -180。
+                name: '测试', // 位置名
+                address: '测试', // 地址详情说明
+                scale: 1, // 地图缩放级别,整形值,范围从1~28。默认为最大
+                infoUrl: '' // 在查看位置界面底部显示的超链接,可点击跳转
+            });
+        }
     });
 </script>
