--- a/WK.Tea.Web/Views/Home/Index.cshtml
+++ b/WK.Tea.Web/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
 <body>
     <div id="LAY_app"></div>
     <script src="~/assets/layui/layui.js"></script>
+    <script src="http://res2.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
     <script>
   layui.config({
       base: '@Url.Content("~/assets/")' //指定 layuiAdmin 项目路径，本地开发用 src，线上用 dist
