--- a/WK.Tea.Web/Views/Shop/Index.cshtml
+++ b/WK.Tea.Web/Views/Shop/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="layui-fluid">
     <div class="shop-list">
-        <a onclick="getDaohang()">1111111111111</a>
+
     </div>
 </div>
 
@@ -48,7 +48,7 @@
                             } else if (item.Flag == 1) {
                                 return '<div class="shop_info_2"> <img style="width:12px; "  src="/assets/images/shop_icon1.png" />' + item.ShopAddress + '- 已停业</div> ';
                             } else {
-                                return '<div class="shop_info_2 daohang"> <img style="width:12px; "  src="/assets/images/shop_icon1.png" />' + item.ShopAddress + '</div> ';
+                                return '<div class="shop_info_2 daohang" onclick="getDaohang()"> <img style="width:12px; "  src="/assets/images/shop_icon1.png" />' + item.ShopAddress + '</div> ';
                             }
                         }()
                         , '<div >'
@@ -76,20 +76,20 @@
 
             }
         });
-        
+
         admin.req({
             url: '/Weixin/sign'
             , type: 'get'
             //, contentType: "application/json"
             , done: function (res) { //这里要说明一下：done 是只有 response 的 code 正常才会执行。而 succese 则是只要 http 为 200 就会执行
-              
+
             }, success: function (res) {
                 wx.config({
-                    debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-                    appId: res.appId, // 必填，公众号的唯一标识
-                    timestamp: res.timestamp, // 必填，生成签名的时间戳
-                    nonceStr: res.nonceStr, // 必填，生成签名的随机串
-                    signature: res.sign,// 必填，签名
+                    debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                    appId: res.data.appId, // 必填，公众号的唯一标识
+                    timestamp: res.data.timestamp, // 必填，生成签名的时间戳
+                    nonceStr: res.data.nonceStr, // 必填，生成签名的随机串
+                    signature: res.data.sign,// 必填，签名
                     jsApiList: ['openLocation', 'getLocation'] // 必填，需要使用的JS接口列表
                 });
             }, complete: function () {
@@ -97,37 +97,24 @@
             }
         });
 
+
         wx.ready(function () {
             console.log(1);
         });
 
         wx.error(function (res) {
-            alert(1234);
             console.log(res);
         });
 
-        document.getElementsByClassName("daohang").onclick = function () {
-            alert(1);
-            wx.openLocation({
-                latitude: 0, // 纬度，浮点数，范围为90 ~ -90
-                longitude: 0, // 经度，浮点数，范围为180 ~ -180。
-                name: '测试', // 位置名
-                address: '测试', // 地址详情说明
-                scale: 1, // 地图缩放级别,整形值,范围从1~28。默认为最大
-                infoUrl: '' // 在查看位置界面底部显示的超链接,可点击跳转
-            });
-        }
-
-        function getDaohang() {
-            alert(2);
-            wx.openLocation({
-                latitude: 0, // 纬度，浮点数，范围为90 ~ -90
-                longitude: 0, // 经度，浮点数，范围为180 ~ -180。
-                name: '测试', // 位置名
-                address: '测试', // 地址详情说明
-                scale: 1, // 地图缩放级别,整形值,范围从1~28。默认为最大
-                infoUrl: '' // 在查看位置界面底部显示的超链接,可点击跳转
-            });
-        }
     });
+    function getDaohang() {
+        wx.openLocation({
+            latitude: 39.996676, // 纬度，浮点数，范围为90 ~ -90
+            longitude: 116.477051, // 经度，浮点数，范围为180 ~ -180。
+            name: '麒麟社', // 位置名
+            address: '北京市望京麒麟社', // 地址详情说明
+            scale: 15, // 地图缩放级别,整形值,范围从1~28。默认为最大
+            infoUrl: '' // 在查看位置界面底部显示的超链接,可点击跳转
+        });
+    }
 </script>
