--- a/WK.Tea.Web/Views/Shop/Detail.cshtml
+++ b/WK.Tea.Web/Views/Shop/Detail.cshtml
@@ -161,6 +161,28 @@
         $('#choiceStartTime input[type=text]').val((nM + 1) + "月" + nD + "日 " + nH + ":" + nMin);
         $('input[name="BTime"]').val(nowDate.getFullYear() + "/" + (nM + 1) + "/" + nD + " " + nH + ":" + nMin);
 
+        admin.req({
+            url: '/Weixin/sign'
+            , type: 'get'
+            , data: {
+                uri: 'http://dc.orangenet.com.cn/#/shop/detail'
+            }
+            //, contentType: "application/json"
+            , done: function (res) { //这里要说明一下：done 是只有 response 的 code 正常才会执行。而 succese 则是只要 http 为 200 就会执行
+
+            }, success: function (res) {
+                wx.config({
+                    debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                    appId: res.data.appId, // 必填，公众号的唯一标识
+                    timestamp: res.data.timestamp, // 必填，生成签名的时间戳
+                    nonceStr: res.data.nonceStr, // 必填，生成签名的随机串
+                    signature: res.data.sign,// 必填，签名
+                    jsApiList: ['openLocation', 'getLocation'] // 必填，需要使用的JS接口列表
+                });
+            }, complete: function () {
+
+            }
+        });
 
         mtimer.render({
             elem: '#choiceStartTime',
