--- a/WK.Tea.Web/Views/Shop/Detail.cshtml
+++ b/WK.Tea.Web/Views/Shop/Detail.cshtml
@@ -22,7 +22,7 @@
             </div>
 
             <div class="detail-info-in p0 layui-clear">
-                <div style="float:left; width:80%">
+                <div style="float:left; width:80%" onclick="getDaohang(@Model.LAT,@Model.LNG,'@Model.ShopName','@Model.ShopAddress')">
                     <img style="width:12px; " src="/assets/images/shop_icon1.png" />@Model.ShopAddress
                 </div>
                 <div style="float:right; width:18%; border-left:1px solid #f6f6f6; text-align:center;">
@@ -194,6 +194,14 @@
             }
         });
 
+        wx.ready(function () {
+            console.log(1);
+        });
+
+        wx.error(function (res) {
+            console.log(res);
+        });
+
         mtimer.render({
             type: 2,
             elem: '#choiceTimeLong',
@@ -301,5 +309,15 @@
 
     });
 
+    function getDaohang(LAT, LNG, ShopName, ShopAddress) {
+        wx.openLocation({
+            latitude: LAT, // 纬度，浮点数，范围为90 ~ -90
+            longitude: LNG, // 经度，浮点数，范围为180 ~ -180。
+            name: ShopName, // 位置名
+            address: ShopAddress, // 地址详情说明
+            scale: 15, // 地图缩放级别,整形值,范围从1~28。默认为最大
+            infoUrl: '' // 在查看位置界面底部显示的超链接,可点击跳转
+        });
+    }
 
 </script>
