--- a/WK.Tea.Web/Views/Door/Qrcode.cshtml
+++ b/WK.Tea.Web/Views/Door/Qrcode.cshtml
@@ -14,6 +14,11 @@
     </style>
 </head>
 <body>
+    @if (ViewBag.qcode != null)
+    {
+        <img src="@ViewBag.qcode"/>
+    }
+
     @if (ViewBag.Url != null)
     {
         <iframe style="border:0; height:100%;width:100%" src="@ViewBag.Url"></iframe>
