--- a/WK.Tea.Web/Views/Door/Qrcode.cshtml
+++ b/WK.Tea.Web/Views/Door/Qrcode.cshtml
@@ -17,6 +17,8 @@
     @if (ViewBag.qcode != null)
     {
         <img src="@ViewBag.qcode"/>
+        <br />
+        <h3>@ViewBag.pwd</h3>
     }
 
     @if (ViewBag.Url != null)
