--- a/WK.Tea.Web/Views/Door/Qrcode.cshtml
+++ b/WK.Tea.Web/Views/Door/Qrcode.cshtml
@@ -9,16 +9,24 @@
     <link rel="stylesheet" href="~/assets/layui/css/layui.css" media="all">
     <style type="text/css">
         html, body {
-            height:100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
+    @*<div style="text-align:center;padding-top:20px; padding-bottom:10px;">
+            <img style="width:150px; height:150px;" src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=1587441635,1276314476&fm=26&gp=0.jpg" />
+        </div>
+        <br />
+        <h3 style="text-align:center;font-weight:700;letter-spacing:5px;">654874</h3>*@
+
     @if (ViewBag.qcode != null)
     {
-        <img src="@ViewBag.qcode"/>
+        <div style="text-align:center;padding-top:20px; padding-bottom:10px;">
+            <img style="width:150px; height:150px;" src="@ViewBag.qcode" />
+        </div>
         <br />
-        <h3>@ViewBag.pwd</h3>
+        <h3 style="text-align:center;font-weight:700;letter-spacing:5px;">@ViewBag.pwd</h3>
     }
 
     @if (ViewBag.Url != null)
