--- a/WK.Tea.Web/Views/Door/Qrcode.cshtml
+++ b/WK.Tea.Web/Views/Door/Qrcode.cshtml
@@ -14,11 +14,11 @@
     </style>
 </head>
 <body>
-    @*<div style="text-align:center;padding-top:20px; padding-bottom:10px;">
-            <img style="width:150px; height:150px;" src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=1587441635,1276314476&fm=26&gp=0.jpg" />
-        </div>
-        <br />
-        <h3 style="text-align:center;font-weight:700;letter-spacing:5px;">654874</h3>*@
+    <div style="text-align:center;padding-top:20px; padding-bottom:10px;">
+        <img style="width:150px; height:150px;" src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=1587441635,1276314476&fm=26&gp=0.jpg" />
+    </div>
+    <br />
+    <h3 style="text-align:center;">解锁码：<span style="text-align:center;font-weight:700;letter-spacing:5px; color:forestgreen">654874</span></h3>
 
     @if (ViewBag.qcode != null)
     {
@@ -26,7 +26,7 @@
             <img style="width:150px; height:150px;" src="@ViewBag.qcode" />
         </div>
         <br />
-        <h3 style="text-align:center;font-weight:700;letter-spacing:5px;">@ViewBag.pwd</h3>
+        <h3 style="text-align:center;">解锁码：<span style="text-align:center;font-weight:700;letter-spacing:5px; color:forestgreen">@ViewBag.pwd</span></h3>
     }
 
     @if (ViewBag.Url != null)
